# Lol

./: .gitignore  README.md  stack.yaml
alchemy/: alchemy.cabal
alchemy/Crypto/Alchemy/: EDSL.hs
challenges/: params.txt  rlwe-challenges.cabal
challenges/exec/: Common.hs  Main.hs  Suppress.hs
lol/: lol.cabal
lol-apps/Crypto/Lol/Applications/: CCA.hs  HomomPRF.hs  KeyHomomorphicPRF.hs  SymmSHE.hs
lol-apps/benchmarks/: HomomPRFBenches.hs
lol-apps/examples/: HomomPRFMain.hs
lol-apps/tests/: HomomPRFTests.hs  SHETests.hs
lol-benches/Crypto/Lol/Benchmarks/: CycBenches.hs
lol-tests/Crypto/Lol/Tests/: CycTests.hs
lol/Crypto/: Lol.hs
lol/Crypto/Lol/: CRTrans.hs  FactoredDefs.hs  FactoredT.hs  Gadget.hs  Prelude.hs  Reflects.hs
lol/Crypto/Lol/Cyclotomic/: CRTSentinel.hs  Cyc.hs  Tensor.hs  UCyc.hs
lol/Crypto/Lol/Cyclotomic/Tensor/: CTensor.hs  RepaTensor.hs
lol/Crypto/Lol/Cyclotomic/Tensor/CTensor/: Extension.hs
lol/Crypto/Lol/Cyclotomic/Tensor/RepaTensor/: CRT.hs  Dec.hs  Extension.hs  GL.hs  RTCommon.hs
lol/Crypto/Lol/RLWE/: Continuous.hs  Discrete.hs  RLWR.hs
lol/Crypto/Lol/Types/: FiniteField.hs  IZipVector.hs  ZqBasic.hs
lol/benchmarks/: Main.hs
lol/utils/: Utils.hs
