name:                alchemy
version:             0.1.0.0
synopsis:            A Language and Compiler for Homomorphic Encryption Made easY
homepage:            https://github.com/cpeikert/Lol
license:             GPL-2
license-file:        LICENSE
author:              Eric Crockett <ecrockett0@gmail.com>, Chris Peikert <cpeikert@alum.mit.edu>
maintainer:          Eric Crockett <ecrockett0@gmail.com>
copyright:           Eric Crockett, Chris Peikert
category:            Crypto
stability:           experimental
build-type:          Simple
extra-source-files:  README, CHANGES.md
cabal-version:       >=1.10
description:
        TODO

source-repository head
  type:     git
  location: https://github.com/cpeikert/Lol

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , lol >= 0.5
                     , lol-apps >= 0.1
  default-language:    Haskell2010
  exposed-modules:     Crypto.Alchemy.EDSL

test-suite alchemy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , alchemy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

